[package]
name = "maschinengott"
version = "0.1.0"
edition = "2021"

[dependencies]
iced-x86 = "1.18.0"
colored = "2.0.0"
structopt = "0.3.26"
rayon = "1.6.1"
console = "0.15.2"
num-format = "0.4.4"
indicatif = "0.17.2"

[target.'cfg(unix)'.dependencies]
object = "0.30.0"

[target.'cfg(windows)'.dependencies]
exe = "0.5.4"
